fix script path in release index

--- a/release/index.html
+++ b/release/index.html
@@ -1,2 +1,2 @@
-<!DOCTYPE html><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><style>body{background-color:#111;margin:0;padding:0;font:caption;height:100vh}</style><body> <script defer src="/app.4335a066.js"></script>
+<!DOCTYPE html><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><style>body{background-color:#111;margin:0;padding:0;font:caption;height:100vh}</style><body> <script defer src="/word-runner-game/release/app.4335a066.js"></script>
 </body>
